# resharp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz-nightly.yml
data/haystacks/: js-ts-html-basket.txt
data/schemas/: auto_harden.schema.json  deriv.schema.json  engine.schema.json  internal.schema.json  prefix.schema.json  quadratic.schema.json  rev_nulls.schema.json
docs/: api.md  features.md  syntax.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/compile/: seed-01  seed-02  seed-03  seed-04  seed-05  seed-06  seed-07  seed-09  seed-10  seed-12  seed-13  seed-14  seed-15
fuzz/dictionaries/: resharp.dict
fuzz/fuzz_targets/: compile.rs  diff_regex.rs  match_invariants.rs  simd_diff.rs
fuzz/src/: lib.rs
resharp-algebra/: Cargo.toml
resharp-algebra/src/: lib.rs  nulls.rs  solver.rs
resharp-algebra/src/unicode_classes/: mod.rs
resharp-engine/: Cargo.toml
resharp-engine/examples/: bug19_time.rs  build_byte_freq.rs  test_nulls.rs
resharp-engine/src/: accel.rs  bdfa.rs  dump.rs  engine.rs  fas.rs  fwd.rs  ldfa.rs  lib.rs  minterms.rs  prefix.rs  scan.rs  stream.rs
resharp-engine/src/simd/: byte_freq.rs  mod.rs  neon.rs  wasm.rs
resharp-engine/tests/: accel_skip_test.rs  anchors.toml  auto_harden.toml  auto_harden_test.rs  basic.toml  boolean.toml  deriv.toml  deriv_test.rs  dump.rs  edge_cases.toml  engine_test.rs  errors.toml  exotic.toml  gen_schemas.rs  is_match.toml  javascript.toml  literal_alt.toml  lookaround.toml  neon_simd_test.rs  normalize.toml  prefix.toml  quadratic.toml  rev_nulls.toml  rev_nulls_test.rs  seek.rs  semantics.toml  sentinel_release_test.rs  stream.rs  word_boundary.toml
resharp-engine/tests/common/: mod.rs  schemas.rs
resharp-parser/src/: lib.rs
scripts/: test-wasm.sh
