[workspace]
members = ["resharp-algebra", "resharp-parser", "resharp-engine", "resharp-ffi"]
resolver = "2"

[workspace.package]
version = "0.6.11"
edition = "2021"
license = "MIT"
repository = "https://github.com/ieviev/resharp"
authors = ["Ian Erik Varatalu"]
rust-version = "1.70"

[workspace.dependencies]
resharp-algebra = { version = "0.6.11", path = "resharp-algebra" }
resharp-parser  = { version = "0.6.11", path = "resharp-parser" }
resharp         = { version = "0.6.11", path = "resharp-engine" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3

