[package]
name = "resharp-algebra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "boolean algebra and symbolic rewriting engine for resharp regex"
keywords = ["regex", "automata", "boolean-algebra"]
categories = ["algorithms"]
readme = "../README.md"

[lib]
doctest = false
test = false

[dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = ["reentrant-assert"]
graphviz = []
norewrite = []
debug = []
reentrant-assert = []
serialize = ["dep:serde"]
