[package]
name = "resharp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "high-performance regex engine with intersection and complement operations"
keywords = ["regex", "automata", "intersection", "complement"]
categories = ["text-processing"]
documentation = "https://docs.rs/resharp"
readme = "../README.md"

[lib]
doctest = false

[features]
default = ["convergence_prefix"]
debug = ["resharp-algebra/debug"]
diag = []
precompile-tests = []
convergence_prefix = []
serialize = ["dep:serde", "dep:bincode", "resharp-algebra/serialize"]

[dependencies]
resharp-algebra.workspace = true
resharp-parser.workspace = true
rustc-hash = "2"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
resharp = { path = ".", features = ["diag"] }
resharp-algebra.workspace = true
resharp-parser.workspace = true
regex-syntax = "0.8.5"
toml = "0.8"
regex = "1"
fancy-regex = "0.14"
regex-automata = "0.4.14"
aho-corasick = "1"
serde_json = "1"
memmap2 = "0.9"
schemars = "0.8"

# rayon doesn't compile on wasi
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "ismatch"
harness = false

[[bench]]
name = "experiments"
harness = false


